--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "portfolio",
   "homepage": "https://geetanjalising.github.io/PortfolioNew",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,13 +15,14 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-scripts": "5.0.1",
+    "react-scrollspy": "^3.4.3",
     "react-toastify": "^9.1.3",
     "react-typical": "^0.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
